--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.1.15 (3.1#release)/ @moemoe</div>
+            <div id="version" class="version">v.1.1.16 (3.1#release)/ @moemoe</div>
             <div class="options-wrapper">
                 <button name="options" id="options" class="options" onclick="toggleOptions()"></button>
                 <button name="credits" id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -270,6 +270,18 @@
                                         <button class="txl-ac-f2 floor-btn">F2</button>
                                     </li>
                                     <li class="txl-sw">Scalegorge Waterscape</li>
+                                    <li class="txl-tsp">The Shackling Prison
+                                        <button class="txl-tsp-f1 floor-btn">F1</button>
+                                        <button class="txl-tsp-b1 floor-btn">B1</button>
+                                        <button class="txl-tsp-b2 floor-btn">B2</button>
+                                        <button class="txl-tsp-b3 floor-btn">B3</button>
+                                        <button class="txl-tsp-b4 floor-btn">B4</button>
+                                    </li>
+                                    <li class="txl-s">Skysplitter
+                                        <button class="txl-s-f1 floor-btn">F1</button>
+                                        <button class="txl-s-f2 floor-btn">F2</button>
+                                        <button class="txl-s-f3 floor-btn">F3</button>
+                                    </li>
                                 </ul>
                             </li>
                           </ul>
