--- a/index.html
+++ b/index.html
@@ -298,49 +298,54 @@
                         <p id="score-info"></p>
                     </div>
                     <div class="stat-icons">
-                        <img id="diff1" src="static/media/icons/diff1.png">
-                        <img id="diff2" src="static/media/icons/diff2.png">
-                        <img id="diff3" src="static/media/icons/diff3.png">
-                        <img id="diff4" src="static/media/icons/diff4.png">
-                        <img id="diff5" src="static/media/icons/diff5.png">
-                        <img id="diff6" src="static/media/icons/diff6.png">
-                        <img id="diff7" src="static/media/icons/diff7.png">
-                        <img id="diff8" src="static/media/icons/diff8.png">
-                        <img id="diff9" src="static/media/icons/diff9.png">
-                        <img id="filter1" src="static/media/icons/filter1.png">
-                        <img id="filter2" src="static/media/icons/filter2.png">
-                        <img id="filter3" src="static/media/icons/filter3.png">
-                        <img id="filter4" src="static/media/icons/filter4.png">
-                        <img id="debuff1" src="static/media/icons/debuff1.png">
-                        <img id="debuff2" src="static/media/icons/debuff2.png">
-                        <img id="debuff5" src="static/media/icons/debuff5.png">
-                        <img id="debuff3" src="static/media/icons/debuff3.png">
-                        <img id="debuff4" src="static/media/icons/debuff4.png">
-                        <img id="debuff5-1" src="static/media/icons/debuff5-1.png">
-                        <img id="debuff5-2" src="static/media/icons/debuff5-2.png">
-                        <img id="debuff5-3" src="static/media/icons/debuff5-3.png">
-                        <img id="debuff5-4" src="static/media/icons/debuff5-4.png">
-                        <img id="debuff6" src="static/media/icons/debuff6.png">
-                        <img id="debuff6-1" src="static/media/icons/debuff6-1.png">
-                        <img id="debuff6-2" src="static/media/icons/debuff6-2.png">
-                        <img id="debuff6-3" src="static/media/icons/debuff6-3.png">
-                        <img id="debuff6-4" src="static/media/icons/debuff6-4.png">
-                        <img id="debuff6-5" src="static/media/icons/debuff6-5.png">
-                        <img id="debuff6-6" src="static/media/icons/debuff6-6.png">
-                        <img id="debuff6-7" src="static/media/icons/debuff6-7.png">
-                        <img id="debuff6-8" src="static/media/icons/debuff6-8.png">
-                        <img id="debuff6-9" src="static/media/icons/debuff6-9.png">
-                        <img id="debuff6-10" src="static/media/icons/debuff6-10.png">
-                        <img id="buff1" src="static/media/icons/buff1.png">
-                        <img id="buff2" src="static/media/icons/buff2.png">
-                        <img id="buff3" src="static/media/icons/buff3.png">
-                        <img id="buff4" src="static/media/icons/buff4.png">
-                        <img id="buff5" src="static/media/icons/buff5.png">
-                        <img id="buff5-1" src="static/media/icons/buff5-1.png">
-                        <img id="buff5-2" src="static/media/icons/buff5-2.png">
-                        <img id="buff5-3" src="static/media/icons/buff5-3.png">
-                        <img id="buff5-4" src="static/media/icons/buff5-4.png">
-                        <img id="buff6" src="static/media/icons/buff6.png">
+                        <img id="diff1"  data-src="static/media/icons/diff1.png"  alt="diff1"  style="display:none;">
+                        <img id="diff2"  data-src="static/media/icons/diff2.png"  alt="diff2"  style="display:none;">
+                        <img id="diff3"  data-src="static/media/icons/diff3.png"  alt="diff3"  style="display:none;">
+                        <img id="diff4"  data-src="static/media/icons/diff4.png"  alt="diff4"  style="display:none;">
+                        <img id="diff5"  data-src="static/media/icons/diff5.png"  alt="diff5"  style="display:none;">
+                        <img id="diff6"  data-src="static/media/icons/diff6.png"  alt="diff6"  style="display:none;">
+                        <img id="diff7"  data-src="static/media/icons/diff7.png"  alt="diff7"  style="display:none;">
+                        <img id="diff8"  data-src="static/media/icons/diff8.png"  alt="diff8"  style="display:none;">
+                        <img id="diff9"  data-src="static/media/icons/diff9.png"  alt="diff9"  style="display:none;">
+
+                        <img id="filter1" data-src="static/media/icons/filter1.png" alt="filter1" style="display:none;">
+                        <img id="filter2" data-src="static/media/icons/filter2.png" alt="filter2" style="display:none;">
+                        <img id="filter3" data-src="static/media/icons/filter3.png" alt="filter3" style="display:none;">
+                        <img id="filter4" data-src="static/media/icons/filter4.png" alt="filter4" style="display:none;">
+
+                        <img id="debuff1"  data-src="static/media/icons/debuff1.png"  alt="debuff1"  style="display:none;">
+                        <img id="debuff2"  data-src="static/media/icons/debuff2.png"  alt="debuff2"  style="display:none;">
+                        <img id="debuff3"  data-src="static/media/icons/debuff3.png"  alt="debuff3"  style="display:none;">
+                        <img id="debuff4"  data-src="static/media/icons/debuff4.png"  alt="debuff4"  style="display:none;">
+                        <img id="debuff5"  data-src="static/media/icons/debuff5.png"  alt="debuff5"  style="display:none;">
+                        <img id="debuff5-1" data-src="static/media/icons/debuff5-1.png" alt="debuff5-1" style="display:none;">
+                        <img id="debuff5-2" data-src="static/media/icons/debuff5-2.png" alt="debuff5-2" style="display:none;">
+                        <img id="debuff5-3" data-src="static/media/icons/debuff5-3.png" alt="debuff5-3" style="display:none;">
+                        <img id="debuff5-4" data-src="static/media/icons/debuff5-4.png" alt="debuff5-4" style="display:none;">
+
+                        <img id="debuff6"    data-src="static/media/icons/debuff6.png"    alt="debuff6"    style="display:none;">
+                        <img id="debuff6-1"  data-src="static/media/icons/debuff6-1.png"  alt="debuff6-1"  style="display:none;">
+                        <img id="debuff6-2"  data-src="static/media/icons/debuff6-2.png"  alt="debuff6-2"  style="display:none;">
+                        <img id="debuff6-3"  data-src="static/media/icons/debuff6-3.png"  alt="debuff6-3"  style="display:none;">
+                        <img id="debuff6-4"  data-src="static/media/icons/debuff6-4.png"  alt="debuff6-4"  style="display:none;">
+                        <img id="debuff6-5"  data-src="static/media/icons/debuff6-5.png"  alt="debuff6-5"  style="display:none;">
+                        <img id="debuff6-6"  data-src="static/media/icons/debuff6-6.png"  alt="debuff6-6"  style="display:none;">
+                        <img id="debuff6-7"  data-src="static/media/icons/debuff6-7.png"  alt="debuff6-7"  style="display:none;">
+                        <img id="debuff6-8"  data-src="static/media/icons/debuff6-8.png"  alt="debuff6-8"  style="display:none;">
+                        <img id="debuff6-9"  data-src="static/media/icons/debuff6-9.png"  alt="debuff6-9"  style="display:none;">
+                        <img id="debuff6-10" data-src="static/media/icons/debuff6-10.png" alt="debuff6-10" style="display:none;">
+
+                        <img id="buff1"  data-src="static/media/icons/buff1.png"  alt="buff1"  style="display:none;">
+                        <img id="buff2"  data-src="static/media/icons/buff2.png"  alt="buff2"  style="display:none;">
+                        <img id="buff3"  data-src="static/media/icons/buff3.png"  alt="buff3"  style="display:none;">
+                        <img id="buff4"  data-src="static/media/icons/buff4.png"  alt="buff4"  style="display:none;">
+                        <img id="buff5"  data-src="static/media/icons/buff5.png"  alt="buff5"  style="display:none;">
+                        <img id="buff5-1" data-src="static/media/icons/buff5-1.png" alt="buff5-1" style="display:none;">
+                        <img id="buff5-2" data-src="static/media/icons/buff5-2.png" alt="buff5-2" style="display:none;">
+                        <img id="buff5-3" data-src="static/media/icons/buff5-3.png" alt="buff5-3" style="display:none;">
+                        <img id="buff5-4" data-src="static/media/icons/buff5-4.png" alt="buff5-4" style="display:none;">
+                        <img id="buff6"  data-src="static/media/icons/buff6.png"  alt="buff6"  style="display:none;">
+
                     </div>
                 </div>
                 <div class="countdown-container">
@@ -382,6 +387,21 @@
         <script src="static/js/audio.js"></script>
             
         <script>
+            /* ---------------- Icon helpers ---------------- */
+            function showIcon(el) {
+                if (!el) return;
+                if (!el.src || el.src === "") {
+                    const src = el.getAttribute("data-src");
+                    if (src) el.setAttribute("src", src);
+                }
+                el.style.display = "block";
+            }
+
+            function hideIcon(el) {
+                if (!el) return;
+                el.style.display = "none";
+            }
+
             // Click event handler debug
             starrailMap.on('click', function (e) {
             var lat = e.latlng.lat;
