--- a/index.html
+++ b/index.html
@@ -2,7 +2,20 @@
 <html lang="en">
     <head>
         <title>Lost In Star Rail</title>
-        <meta name="viewport" content="width=device-width, initial-scale=0.75">
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+        <link rel="manifest" href="/manifest.json">
+
+        <!-- Basic theme color for browsers -->
+        <meta name="theme-color" content="#000000">
+
+        <!-- iOS-specific meta tags -->
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <link rel="apple-touch-icon" href="/icons/icon-180.png">
+
+        <!-- Recommended: fallback favicon -->
+        <link rel="icon" href="/icons/icon-192.png">
+
         <link rel="icon" href="static/media/home/march7thcheer.png">
         <link rel="stylesheet" href="static/css/styles.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -26,7 +39,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.1.19 (3.6#release)/ @moemoe</div>
+            <div id="version" class="version">v.1.1.20 (3.6#release)/ @moemoe</div>
             <div class="options-wrapper">
                 <button name="options" id="options" class="options" onclick="toggleOptions()"></button>
                 <button name="credits" id="credits" class="credits" onclick="toggleCredits()"></button>
