--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Lost In Star Rail</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+        <meta name="viewport" content="width=device-width, initial-scale=0.8, viewport-fit=cover">
         <link rel="manifest" href="/manifest.json">
 
         <!-- Basic theme color for browsers -->
@@ -11,10 +11,7 @@
         <!-- iOS-specific meta tags -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <link rel="apple-touch-icon" href="/icons/icon-180.png">
-
-        <!-- Recommended: fallback favicon -->
-        <link rel="icon" href="/icons/icon-192.png">
+        <link rel="apple-touch-icon" href="/static/media/home/march7thcheer.png">
 
         <link rel="icon" href="static/media/home/march7thcheer.png">
         <link rel="stylesheet" href="static/css/styles.css">
