--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
     <body>
         <div class="rotate-screen-mobile">
-            <div class="rotate-screen-mobile-text">Rotate your device for the best experience :D</div>
+            <div class="rotate-screen-mobile-text">Please rotate your device to play this game.</div>
         </div>
         <div class="container">
             <img src="static/media/home/list.png" alt="Lost In Star Rail" class="lihsr" id="homelogo">
