--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- iOS-specific meta tags -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <link rel="apple-touch-icon" href="/static/media/home/march7thcheer.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/static/media/home/march7thcheer.png">
 
         <link rel="icon" href="static/media/home/march7thcheer.png">
         <link rel="stylesheet" href="static/css/styles.css">
