--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.8, viewport-fit=cover">
         <link rel="manifest" href="/manifest.json">
 
-        <!-- Basic theme color for browsers -->
         <meta name="theme-color" content="#000000">
 
         <!-- iOS-specific meta tags -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/media/home/march7thcheer.png">
+        <!-- iOS Home Screen icon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
         <link rel="icon" href="static/media/home/march7thcheer.png">
         <link rel="stylesheet" href="static/css/styles.css">
