--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
     <head>
         <title>Lost In Star Rail</title>
         <meta name="viewport" content="width=device-width, initial-scale=0.8, viewport-fit=cover">
-        <link rel="manifest" href="static/manifest.json">
-
         <meta name="theme-color" content="#000000">
-
         <!-- iOS-specific meta tags -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <!-- iOS Home Screen icon -->
         <link rel="icon" type="image/png" href="/static/media/favicon/favicon-96x96.png" sizes="96x96" />
         <link rel="icon" type="image/svg+xml" href="/static/media/favicon/favicon.svg" />
         <link rel="shortcut icon" href="/static/media/favicon/favicon.ico" />
         <link rel="apple-touch-icon" sizes="180x180" href="/static/media/favicon/apple-touch-icon.png" />
-        <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+        <meta name="apple-mobile-web-app-title" content="Lost In Star Rail" />
+        <link rel="manifest" href="/static/media/favicon/site.webmanifest" />
 
         <link rel="stylesheet" href="static/css/styles.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
