--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.1.20 (3.6#release)/ @moemoe</div>
+            <div id="version" class="version">v.1.1.21 (3.6#release)/ @moemoe</div>
             <div class="options-wrapper">
                 <button name="options" id="options" class="options" onclick="toggleOptions()"></button>
                 <button name="credits" id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -372,6 +372,7 @@
                     <div class="guess-container">
                         <div id="guessResult" class="guess-result"></div>
                         <button id="next-round" class="next-round">Next Round</button>
+                        <div id="guessHelper" class="guess-helper">Press [Space] to continue</div>
                     </div>
                 </div>
             </div>    
