--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         crossorigin=""></script>
         <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-image/v0.0.4/leaflet-image.js'></script>
     </head>
-    <body>
+    <body oncontextmenu="return false">
         <div class="rotate-screen-mobile">
             <div class="rotate-screen-mobile-text">Please rotate your device to play this game.</div>
         </div>
@@ -36,7 +36,7 @@
         </div>
         <div>
             <h1 id="home">Can you find where you are in Honkai Star Rail?</h1>
-            <div id="version" class="version">v.1.1.23 (3.7#release)/ @moemoe</div>
+            <div id="version" class="version">v.1.1.24 (3.7#release)/ @moemoe</div>
             <div class="options-wrapper">
                 <button name="options" id="options" class="options" onclick="toggleOptions()"></button>
                 <button name="credits" id="credits" class="credits" onclick="toggleCredits()"></button>
@@ -371,7 +371,6 @@
                 <div id="guessOverlay" class="guess-overlay"></div>
                 <div class="guess-wrapper">
                     <div id="resultmap"></div>
-                    <div id="countdown-timeup"></div>
                     <div class="guess-container">
                         <div id="guessResult" class="guess-result"></div>
                         <button id="next-round" class="next-round">Next Round</button>
